# foreign_remittance_cal

./: README.md  pyproject.toml
hdfc/: cmdline_parser.py  exchange_rate.py  in_ind.py  main.py  out_ger.py
